# celestella

./: .gitignore  LICENSE  README.md
Celestella/Assets/Scenes/: SampleScene.unity
Celestella/Assets/Scripts/: PlayerController.cs  PlayerMover.cs
Celestella/Assets/Scripts/Physics/: CollisionDetector.cs  PlayerCollider.cs
Celestella/Assets/Scripts/StateMachine/: StateMachine.cs
Celestella/Assets/Scripts/StateMachine/States/: Climbing.cs  FreeX.cs  InAir.cs  Jetpacking.cs  Jumping.cs  LockedX.cs  OnGround.cs  Running.cs  Sliding.cs  Standing.cs
Celestella/Assets/Sprites/: celeste_frames_0.controller  idle.anim
Celestella/Assets/Tiles/Stage1/: Stage1.prefab  celeste_clone-Sheet.aseprite  celeste_clone.aseprite  celeste_run.aseprite  concrete.aseprite  stage1_0.asset  stage1_1.asset  stage1_10.asset  stage1_11.asset  stage1_2.asset  stage1_3.asset  stage1_4.asset  stage1_5.asset  stage1_6.asset  stage1_7.asset  stage1_8.asset  stage1_9.asset
Celestella/ProjectSettings/: ProjectSettings.asset
source/: CMakeLists.txt
source/lib/glad/include/glad/: glad.h
source/output/src/: glad.c
source/src/: main.cpp
